kubernetes/vpro-app/vprodbdep.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: vprodb
  labels:
    app: vprodb
spec:
  selector:
    matchLabels:
      app: vprodb
  replicas: 1
  template:
    metadata:
      labels:
        app: vprodb
    spec:
      containers:
       - name: vprodb
         image: omar0940/vprofiledb
         resources:
           limits:
             memory: "512Mi"
             cpu: "500m"
         volumeMounts:
         - mountPath: /var/lib/mysql
           name: vpro-db-data
         ports:
         - name: vprodb-port
           containerPort: 3306
